--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Software Developer, Web Developer, UI/UX Designer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="" class="btn btn-outline-light mr-5">CV</a>
+                        <a href="" class="btn btn-outline-light mr-5">Explore my CV</a>
                         <a href="https://youtu.be/Zcps-uDkknQ">
                             <button type="button" class="btn-play" href="https://youtu.be/Zcps-uDkknQ" data-target="#videoModal">
                                 <span></span>
