--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <div class="col-lg-8">
                     <div class="contact-form text-center">
                         <div id="success"></div>
-                        <form name="contactForm" id="contactForm" method="POST" action="contact.php" novalidate="novalidate">
+                        <form name="contactForm" id="contactForm" method="POST" action="mail/contact.php" novalidate="novalidate">
                             <div class="form-row">
                                 <div class="control-group col-sm-6">
                                     <input type="text" class="form-control p-4" id="name" name="name" placeholder="Your Name"
