--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/flori-vula-2b6609232"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/florivula"><i class="fab fa-linkedin-in"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://github.com/florivula"><i class="fab fa-github"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.behance.net/florivula"><i class="fab fa-behance"></i></a>
                 <a class="btn btn-light btn-social" href="https://www.instagram.com/florivula/"><i class="fab fa-instagram"></i></a>
