--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Software Developer & UI/UX Designer</h3>
-                    <p>I am Flori Vula, a second-year student at the University of Business and Technology majoring in Computer Science and Engineering. I have a lot of experience and also a lot of knowledge in programming. I am an "Advanced Java Programmer" who completed Java courses in university with the highest grades. I also possess knowledge and skills in Kotlin for which I am in the process of being certified by Google, and I have an average level of experience in Web Development. But of course I aim and demand more from myself; I am eager to expand my skills in all these areas.</p>
+                    <p>I am Flori Vula, a third-year student at the University of Business and Technology majoring in Computer Science and Engineering. I have a lot of experience and also a lot of knowledge in programming. I am an "Advanced Java Programmer" who completed Java courses in university with the highest grades. I also possess knowledge and skills in Kotlin for which I am in the process of being certified by Google, and I have an average level of experience in Web Development. But of course I aim and demand more from myself; I am eager to expand my skills in all these areas.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Flori Vula</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">11 May 2003</span></h6></div>
