--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                     <div class="typed-text d-none">Software Developer, Web Developer, UI/UX Designer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="img/cv.pdf" class="btn btn-outline-light mr-5">Explore my CV</a>
-                        <a href="https://youtu.be/Zcps-uDkknQ">
-                            <button type="button" class="btn-play" href="https://youtu.be/Zcps-uDkknQ" data-target="#videoModal">
+                        <a href="https://florivula.github.io/CosmicClash/">
+                            <button type="button" class="btn-play" href="https://florivula.github.io/CosmicClash/" data-target="#videoModal">
                                 <span></span>
                             </button>
                         </a>
-                        <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Latest Project</h5>
+                        <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Latest Project -<br>Cosmic Clash Game</h5>
                     </div>
                 </div>
             </div>
@@ -97,10 +97,10 @@
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Flori Vula</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">11 May 2003</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Expected Bachelor's degree completion date: July/2024</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Expected Bachelor's degree completion date: September/2024</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">3 Years</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+383 44 390 535</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">vulaflori@gmail.com</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">vula.flori@gmail.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Gjakovë, Kosovo</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary" style="-webkit-text-fill-color: #3498db;">Available</span></h6></div>
                     </div>
@@ -275,6 +275,16 @@
                         <img class="img-fluid rounded w-100" src="img/donerok.jpg" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="https://www.behance.net/gallery/182269503/OK-Doner">
+                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/cosmicclash.png" alt="">
+                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                            <a href="https://florivula.github.io/CosmicClash/">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
