--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
                 <a href="#skill" class="nav-item nav-link">Skill</a>
-                <a href="#service" class="nav-item nav-link">Service</a>
+                <a href="#experience" class="nav-item nav-link">Experience</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
@@ -63,9 +63,9 @@
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Flori Vula</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Software Developer, Web Developer, UI/UX Designer</div>
+                    <div class="typed-text d-none">Full-Stack Developer, UI/UX Designer, Graphic Designer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="img/cv.pdf" class="btn btn-outline-light mr-5">Explore my CV</a>
+                        <a href="img/Flori Vula - CV.pdf" class="btn btn-outline-light mr-5">Explore my CV</a>
                         <a href="https://florivula.github.io/CosmicClash/">
                             <button type="button" class="btn-play" href="https://florivula.github.io/CosmicClash/" data-target="#videoModal">
                                 <span></span>
@@ -97,12 +97,12 @@
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Flori Vula</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">11 May 2003</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Expected Bachelor's degree completion date: September/2024</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Expected Bachelor's degree completion date: December/2024</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">3 Years</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+383 44 390 535</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">vula.flori@gmail.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Gjakovë, Kosovo</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary" style="-webkit-text-fill-color: #3498db;">Available</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary" style="-webkit-text-fill-color: #db3434;">Unavailable</span></h6></div>
                     </div>
                     <a href="#contact" class="btn btn-outline-primary mr-4">Let's talk</a>
                     <a href="" class="btn btn-outline-primary">Learn More</a>
@@ -123,40 +123,40 @@
                 <div class="col-md-6">
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Java</h6>
-                            <h6 class="font-weight-bold">85%</h6>
+                            <h6 class="font-weight-bold">React JS</h6>
+                            <h6 class="font-weight-bold">70%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Kotlin</h6>
-                            <h6 class="font-weight-bold">75%</h6>
+                            <h6 class="font-weight-bold">ASP.NET</h6>
+                            <h6 class="font-weight-bold">80%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">SQL</h6>
-                            <h6 class="font-weight-bold">65%</h6>
+                            <h6 class="font-weight-bold">75%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Javascript</h6>
-                            <h6 class="font-weight-bold">60%</h6>
+                            <h6 class="font-weight-bold">Java</h6>
+                            <h6 class="font-weight-bold">85%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                     <div class="skill mb-4">
@@ -171,10 +171,10 @@
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">Adobe Photoshop</h6>
-                            <h6 class="font-weight-bold">85%</h6>
+                            <h6 class="font-weight-bold">90%</h6>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -184,42 +184,45 @@
     <!-- Skill End -->
 
 
-    <!-- Services Start -->
-    <div class="container-fluid pt-5" id="service">
+    <!-- Experience Start -->
+    <div class="container-fluid pt-5" id="experience">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #84BFFF;">Service</h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Services</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #84BFFF;">Experience</h1>
+                <h1 class="position-absolute text-uppercase text-primary">Work Experience</h1>
             </div>
             <div class="row pb-3">
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0">Software Development</h4>
+                        <i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
+                        <h4 class="font-weight-bold m-0">Full-Stack Developer & <br>Graphic Designer</h4>
                     </div>
-                    <p>Custom software development service tailored to meet unique client needs. Experienced developers create efficient, reliable, and scalable software.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <h5 class="font-weight-bold m-0">at "LWP Energie"</h5>
+                    <p>I developed the company's web application and designed graphics to strengthen the company’s online presence and user experience.</p>
+                    <a class="border-bottom border-primary text-decoration-none" href="img/Flori Vula - CV.pdf">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0">Web Development</h4>
+                        <i class="fa fa-2x fa-laptop service-icon bg-primary text-white mr-3"></i>
+                        <h4 class="font-weight-bold m-0">Video Editor / Designer</h4>
                     </div>
-                    <p>Professional web development service delivering visually appealing, responsive and functional websites using latest technologies and best practices.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <h5 class="font-weight-bold m-0">at "DzO Media"</h5>
+                    <p>I produce video content and graphics for digital marketing, enhancing brand presence and supporting search arbitrage strategies.</p>
+                    <a class="border-bottom border-primary text-decoration-none" href="img/Flori Vula - CV.pdf">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fas fa-2x fa-object-group service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0">UI/UX Design</h4>
+                        <h4 class="font-weight-bold m-0">Graphic Designer</h4>
                     </div>
-                    <p>Expert UI/UX design service creating visually engaging and intuitive interfaces to enhance user experience, increase engagement and drive business results.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <h5 class="font-weight-bold m-0">at "Dukagjini Publishing House"</h5>
+                    <p>I designed graphics and layouts for children’s school books, ensuring quality while enhancing visual appeal and effectiveness.</p>
+                    <a class="border-bottom border-primary text-decoration-none" href="img/Flori Vula - CV.pdf">Read More</a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Services End -->
+    <!-- Experiences End -->
 
 
     <!-- Portfolio Start -->
@@ -244,7 +247,7 @@
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/easyorder.jpg" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="https://github.com/florivula/EasyOrder">
+                            <a href="https://github.com/florivula/EasyOrder-POS">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
                         </div>
