--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/flori.jpg" alt="">
+                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/flori-11.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
@@ -84,7 +84,7 @@
     <div class="container-fluid py-5" id="about">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #84BFFF;">About</h1> <!--hexi code perpara #dee2e6-->
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #7b7b7b;">About</h1> <!--hexi code perpara #dee2e6-->
                 <h1 class="position-absolute text-uppercase text-primary">About Me</h1>
             </div>
             <div class="row align-items-center">
@@ -93,7 +93,13 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Software Developer & UI/UX Designer</h3>
-                    <p>I am Flori Vula, a third-year student at the University of Business and Technology majoring in Computer Science and Engineering. I have a lot of experience and also a lot of knowledge in programming. I am an "Advanced Java Programmer" who completed Java courses in university with the highest grades. I also possess knowledge and skills in Kotlin for which I am in the process of being certified by Google, and I have an average level of experience in Web Development. But of course I aim and demand more from myself; I am eager to expand my skills in all these areas.</p>
+                    <p>I am Flori Vula, a third-year Computer Science and Engineering student at the University of Business and Technology. 
+                        I specialize in <b>Fullstack Development</b>, working with <b>React.js</b>, <b>ASP.NET</b>, and <b>SQL</b> to build dynamic web applications. 
+                        I also have experience in <b>Java</b>, <b>JavaFX</b>, and <b>Kotlin</b>, further strengthening my technical skills. <br>
+                        Alongside my development work, I’m an experienced graphic designer with nearly 10 years of expertise in <b>Adobe Photoshop</b> and <b>Illustrator</b>. 
+                        My background in design, combined with my programming skills, allows me to create both functional and visually appealing solutions. 
+                        I also have experience in <b>video editing</b> and <b>search arbitrage</b>. 
+                        But of course I aim and demand more from myself; I am eager to expand my skills in all these areas.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Flori Vula</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">11 May 2003</span></h6></div>
@@ -116,7 +122,7 @@
     <div class="container-fluid py-5" id="skill">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #84BFFF;">Skills</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #7b7b7b;">Skills</h1>
                 <h1 class="position-absolute text-uppercase text-primary">My Skills</h1>
             </div>
             <div class="row align-items-center">
@@ -188,7 +194,7 @@
     <div class="container-fluid pt-5" id="experience">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #84BFFF;">Experience</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #7b7b7b;">Experience</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Work Experience</h1>
             </div>
             <div class="row pb-3">
@@ -229,7 +235,7 @@
     <div class="container-fluid pt-5 pb-3" id="portfolio">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #84BFFF;">Projects</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #7b7b7b;">Projects</h1>
                 <h1 class="position-absolute text-uppercase text-primary">My Portfolio</h1>
             </div>
             <div class="row">
@@ -352,7 +358,7 @@
     <div class="container-fluid py-5" id="contact">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #84BFFF;">Contact</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #7b7b7b;">Contact</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Contact Me</h1>
             </div>
             <div class="row justify-content-center">
